erDiagram
  HOTEL_CHAIN ||--|{ HOTEL : owns
  HOTEL_CHAIN ||--|{ HOTEL_CHAIN_EMAIL : has
  HOTEL_CHAIN ||--|{ HOTEL_CHAIN_PHONE : has
  HOTEL ||--|{ ROOM : contains
  HOTEL ||--|{ EMPLOYEE : employs
  HOTEL ||--o| EMPLOYEE : managed_by
  CUSTOMER ||--o| APP_USER : authenticates_as
  EMPLOYEE ||--o| APP_USER : authenticates_as
  ROOM }o--o{ AMENITY : has
  CUSTOMER ||--o{ BOOKING : makes
  ROOM ||--o{ BOOKING : reserved_for
  CUSTOMER ||--o{ RENTING : rents
  ROOM ||--o{ RENTING : rented_as
  EMPLOYEE ||--o{ RENTING : processed_by
  BOOKING ||--o| RENTING : transformed_to

  BOOKING ||--o{ ARCHIVE_BOOKING : archived_as
  RENTING ||--o{ ARCHIVE_RENTING : archived_as

  HOTEL_CHAIN {
    int Chain_ID PK
    string Office_Address
    string Name
  }

  HOTEL_CHAIN_EMAIL {
    int Chain_ID FK
    string Email PK
  }

  HOTEL_CHAIN_PHONE {
    int Chain_ID FK
    string Phone PK
  }

  HOTEL {
    int Hotel_ID PK
    int Chain_ID FK
    string Name
    int Rating
    string Address
    string Email
    string Phone
    int Manager_ID FK
  }

  EMPLOYEE {
    int Emp_ID PK
    int Hotel_ID FK
    string SSN_SIN
    string Full_Name
    string Address
    string Role
  }

  CUSTOMER {
    int Cust_ID PK
    string Full_Name
    string Address
    string ID_Type
    string ID_Number
    date Registration_Date
  }

  APP_USER {
    int User_ID PK
    string Username
    string Password_Hash
    string Role
    int Cust_ID FK
    int Emp_ID FK
  }

  ROOM {
    int Room_ID PK
    int Hotel_ID FK
    string Room_Number
    decimal Price
    string Capacity
    string View_Type
    bool Extendable
    string Status
  }

  AMENITY {
    int Amenity_ID PK
    string Name
  }

  BOOKING {
    int Book_ID PK
    int Room_ID FK
    int Cust_ID FK
    date Start_Date
    date End_Date
  }

  RENTING {
    int Rent_ID PK
    int Book_ID FK
    int Room_ID FK
    int Cust_ID FK
    int Emp_ID FK
    date CheckIn_Date
    date CheckOut_Date
    decimal Amount_Paid
  }

  ARCHIVE_BOOKING {
    int Archive_ID PK
    int Old_Book_ID
    string Customer_Name
    string Hotel_Name
    string Room_Number
  }

  ARCHIVE_RENTING {
    int Archive_ID PK
    int Old_Rent_ID
    string Customer_Name
    string Hotel_Name
    string Room_Number
  }
